@@ -56,10 +56,6 @@ extern WORD LBWMOV(WORD *pdst, BYTE *psrc);
                                                 /*   high word  of long */
 #define HW(x) ((LONG)((UWORD)(x)) << 16)
 
-                                                /* return high word of  */
-                                                /*   a long value       */
-#define LHIWD(x) ((UWORD)(x >> 16))
-
 
 
 /************************************************************************/
