@@ -4895,3 +4895,5 @@ Start... early ages
 2013-07-31
 - aes/gemasync.c aes/gemdisp.c aes/geminput.c aes/gemoblib.c
   include/compat.h: Eliminate LLOWD() compatibility macro. (RFB)
+- aes/geminput.c include/compat.h: Eliminate LHIWD() compatibility
+  macro. (RFB)
